# python-projects-skeleton

./: .gitlab-ci.yml  .travis.yml  Dockerfile  Makefile  README.rst  TODO_PYTHON_PACKAGE_NAME.service  debian8-dist.sh  init-skeleton.sh  meta.sh  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.cfg  setup.py
.project_scaffolding/: init-skeleton.py  vars.yml
.project_scaffolding/templates/: README.rst.j2
TODO_PYTHON_PACKAGE_NAME/: __init__.py
ansible/: hosts
docs/: conf.py  developer.rst
examples/: README.txt  plot_getting_started.py
