[project]
authors = [
    {name = "TODO_AUTHOR_NAME", email = "TODO_AUTHOR_EMAIL"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Framework",
]
description = "TODO_PROJECT_SHORT_DESC"
dynamic = ["dependencies"]
name = "TODO_PYTHON_PACKAGE_NAME"
readme = "README.rst"
requires-python = ">=3.8"
version = "0.1.dev0"

# [project.scripts]
# SCRIPT_NAME = "SCRIPT_PATH:SCRIPT_FUNCTION"

[build-system]
requires = [
    'box2d',
    'casadi',
    'celery',
    'cma',
    'coverage',
    'Flask',
    'gunicorn',
    'gymnasium',
    'influxdb-client',
    'ipydatagrid',
    'ipython',
    'ipywidgets',
    'Jinja2',
    'jupyterlab',
    'matplotlib',
    'mediapipe',
    'networkx[default]',
    'numba',
    'numpy',
    'openpyxl',
    'paho-mqtt',
    'pandas',
    'Pillow',
    'plotly',
    'psycopg2',
    'pymodbus[repl,serial]',
    'pymongo',
    'pyomo',
    'PyOpenGL',
    'PyOpenGL-accelerate',
    'PyQt6',
    'pyside6',
    'pytest',
    'pyvirtualdisplay',
    'pyyaml==6.0',
    'redis',
    'requests==2.28.1',
    'scikit-learn',
    'scipy',
    'seaborn',
    'setuptools',
    'Sphinx',
    'sphinx-gallery',
    'sphinx-rtd-theme',
    'stable-baselines3',
    'statsmodels==0.13.5',
    'tensorboard',
    'tensorflow',
    'torch',
    'torchaudio',
    'torchvision',
    'tqdm',
    'voila',
    'websocket-client',
    'Werkzeug',
    'xlrd',
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["TODO_PYTHON_PACKAGE_NAME"]

# Use requirements.txt to setup dependencies (c.f. https://stackoverflow.com/a/73600610)
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
